# production-rag-platform

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/corpus/: AI_alignment.json  AI_safety.json  AI_takeover.json  AI_winter.json  A_B_testing.json  Accuracy_and_precision.json  Activation_function.json  Active_learning_machine_learning.json  Actor_critic_algorithm.json  Adam_optimization_algorithm.json  Adversarial_machine_learning.json  Affective_computing.json  Alan_Turing.json  AlexNet.json  Algorithmic_bias.json  AlphaFold.json  AlphaGo.json  AlphaZero.json  Andrew_Ng.json  Anomaly_detection.json  Anthropic.json  Apache_Spark.json  Artificial_Intelligence_Act.json  Artificial_general_intelligence.json  Artificial_intelligence.json  Artificial_neural_network.json  Association_rule_learning.json  Attention_machine_learning.json  Autoencoder.json  Automated_planning_and_scheduling.json  Automatic_differentiation.json  Autonomous_robot.json  BERT_language_model.json  BLEU.json  Backpropagation.json  Batch_normalization.json  Bayes_theorem.json  Bayesian_inference.json  Bayesian_network.json  Bayesian_optimization.json  (+280 more)
deploy/: README_hf.md
evals/: REPORT.md  __init__.py  build_dataset.py  dataset.json  judge.py  report.py  run.py
evals/results/: baseline.json  full.json  summary.json
scripts/: deploy_hf.sh
src/rag/: __init__.py  api.py  config.py  embeddings.py  guardrails.py  (+6 more)
static/: dashboard.html  index.html
tests/: test_chunk.py  test_guardrails.py  test_pipeline.py
(+6 files in other folders)
