[project]
name = "rag-platform"
version = "1.0.0"
description = "Production RAG platform with hybrid retrieval, cross-encoder reranking, agentic groundedness self-checks, and a measured evaluation harness"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { file = "LICENSE" }
authors = [{ name = "Viresh Koli" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "qdrant-client[fastembed]>=1.12",
    "sentence-transformers>=3.3",
    "anthropic>=0.40",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "evals", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
